Squash BMP280 demo.
This is a combination of 6 commits:
Start BMP280 driver.
Open bmp280 device.
Read data from BMP280.
Scroll data.
Poll buttons.
Single LED for Temperature and Pressure.

--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -1,8 +1,10 @@
 all:
 	gcc -Wall -Wextra buzzer.c -pthread -lwiringPi -o buzzer.exe
-	gcc -Wall -Wextra -DTEST blinkt.c -pthread -lwiringPi -o blinkt.exe
-	gcc -Wall -Wextra -DRAINTEST blinkt.c -pthread -lwiringPi -o rainbow.exe
+	gcc -Wall -Wextra -DBTEST blinkt.c -pthread -lwiringPi -o blinkt.exe
+	gcc -Wall -Wextra -DTEST blinkt.c -pthread -lwiringPi -o rainbow.exe
 	gcc -Wall -Wextra -DTEST alphanum.c -pthread -lwiringPi -o alphanum.exe
+	gcc -Wall -Wextra weather.c -pthread -lwiringPi -o weather.exe
+
 
 
 
